# BitBot

./: .gitignore  .gitmodules  Cargo.toml  README.md  analysis.rs  kraken_query_test.py  mainframe.py
src/: BitBot.rs  statistics.rs
